--- a/apple-calculator.html
+++ b/apple-calculator.html
@@ -1,10 +1,13 @@
 <html>
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <script src="Day1.js"></script>
+        <script src="apple_calculator.js"></script>
         <link href="apple-calculator.css" rel="stylesheet"></link>
     </head>
     <body>
         <div id="fullCalc">
-            <div><input></input></div>
+            <div><input id="calcDisplay"></input></div>
             <div class = "row">
                 <button class="allbuttons regbuttons">MC</button>
                 <button class="allbuttons regbuttons">M+</button>
@@ -12,31 +15,31 @@
                 <button class="allbuttons regbuttons">MR</button>
             </div>
             <div class = "row">
-                <button class="allbuttons regbuttons">C</button>
+                <button class="allbuttons regbuttons clearbutton">C</button>
                 <button class="allbuttons regbuttons">&plusmn;</button>
-                <button class="allbuttons regbuttons">&divide;</button>
-                <button class="allbuttons regbuttons">X</button>
+                <button class="allbuttons regbuttons charbutton" data-char="/">&divide;</button>
+                <button class="allbuttons regbuttons charbutton" data-char="*">X</button>
             </div>
             <div class = "row">
-                <button class="allbuttons regbuttons">7</button>
-                <button class="allbuttons regbuttons">8</button>
-                <button class="allbuttons regbuttons">9</button>
-                <button class="allbuttons regbuttons">-</button>             
+                <button class="allbuttons regbuttons charbutton" data-char="7">7</button>
+                <button class="allbuttons regbuttons charbutton" data-char="8">8</button>
+                <button class="allbuttons regbuttons charbutton" data-char="9">9</button>
+                <button class="allbuttons regbuttons charbutton" data-char="-">-</button>             
             </div>
             <div class = "row">
-                <button class="allbuttons regbuttons">4</button>
-                <button class="allbuttons regbuttons">5</button>
-                <button class="allbuttons regbuttons">6</button>
-                <button class="allbuttons regbuttons">+</button>
+                <button class="allbuttons regbuttons charbutton" data-char="4">4</button>
+                <button class="allbuttons regbuttons charbutton" data-char="5">5</button>
+                <button class="allbuttons regbuttons charbutton" data-char="6">6</button>
+                <button class="allbuttons regbuttons charbutton" data-char="+">+</button>
             </div>
             <div class = "row">
-                <button class="allbuttons regbuttons">1</button>
-                <button class="allbuttons regbuttons">2</button>
-                <button class="allbuttons regbuttons">3</button>
+                <button class="allbuttons regbuttons charbutton" data-char="1">1</button>
+                <button class="allbuttons regbuttons charbutton" data-char="2">2</button>
+                <button class="allbuttons regbuttons charbutton" data-char="3">3</button>
             </div>
             <div class = "row lastRow">
-                <button class="allbuttons zero">0</button>
-                <button class="allbuttons regbuttons">.</button>
+                <button class="allbuttons zero charbutton" data-char="0">0</button>
+                <button class="allbuttons regbuttons charbutton" data-char=".">.</button>
                 <button class="allbuttons equals"><p>=</p></button>
             </div>
     </body>
