--- a/FinalCalc/FinalCalc.html
+++ b/FinalCalc/FinalCalc.html
@@ -16,8 +16,9 @@
         <link href="appleCalc.css" rel="stylesheet"></link> -->
     </head>
     <body>
-
+        
         <div id = "totalCalc">
+
             <h1>Graphing Calculator</h1>
             <div class="graphcalc"></div>
             <div id="fullCalc">
@@ -60,5 +61,6 @@
             </div>
         </div>
         <img class="widget" src="calcWidget.png" onclick = "toggleCalc()">
+        <!-- <div class = "hidden"></div> -->
     </body>
 </html>
