--- a/Day8Visual/visual.html
+++ b/Day8Visual/visual.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<div class="chart-container"></div>
+		<script src="data.js"></script>
 		<script src="visual.js"></script>
+
 	</body>
 </html>
