Value and weight now changes, but does not check if limit was exceeded

--- a/Day 9/knapsack.html
+++ b/Day 9/knapsack.html
@@ -32,6 +32,7 @@
 					</div>
 				</div>
 				<div class = "span6" id = "knapsack">
+
 					<div class="knapsack" data-maxweight="20">
 						<div>
 							<img id = "clock" class = "item knapsack itemLeft knapItem" src="http://web.mit.edu/6.mitx/www/demo/knapsack/clock.png" data-value ="175" data-weight="10" data-name="clock">
@@ -47,6 +48,14 @@
 							<img id = "book" class = "item knapsack itemLeft knapItem" src="http://web.mit.edu/6.mitx/www/demo/knapsack/book.png" data-value ="10" data-weight="1" data-name="book">
 							<img id = "computer" class = "item knapsack itemRight knapItem" src="http://web.mit.edu/6.mitx/www/demo/knapsack/computer.png" data-value ="200" data-weight="20" data-name="computer">
 						</div>
+					</div>
+				</div>
+				<div class = "row">
+					<div class = "span6">
+						<h3> Value: <span class = "value">0</span></h2>
+					</div>
+					<div class = "span6">
+						<h3> Weight: <span class = "weight">0</span>/20kg</h2>
 					</div>
 				</div>
 			</div>
