--- a/Day8Visual/visual.html
+++ b/Day8Visual/visual.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div class="chart-container"></div>
+		<div class="progress-bar"></div>
 		<script src="data.js"></script>
 		<script src="visual.js"></script>
 
