--- a/Day 9/knapsack.html
+++ b/Day 9/knapsack.html
@@ -73,6 +73,8 @@
 				<button type="button" class="close" data-dismiss="alert">&times;</button>
 				<strong>Hey! </strong>That item is too heavy for your bag!
 			</div>
+			<div id = "success" class="alert alert-success">HUZZAH! You got your loot! You should probably run now.</div>
+			<button id = "submit" class = "btn-success">Submit</button>
 		</div>
 		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
