--- a/Day 9/knapsack.html
+++ b/Day 9/knapsack.html
@@ -73,6 +73,10 @@
 				<button type="button" class="close" data-dismiss="alert">&times;</button>
 				<strong>Hey! </strong>That item is too heavy for your bag!
 			</div>
+			<div id = "again" class = "alert">
+				<button type="button" class="close" data-dismiss="alert">&times;</button>
+				<strong>NOT GOOD ENOUGH...MOAR MONEY</strong>
+			</div>
 			<div id = "success" class="alert alert-success">HUZZAH! You got your loot! You should probably run now.</div>
 			<button id = "submit" class = "btn-success">Submit</button>
 		</div>
